Added formatting changes for smaller screens

--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ div.goals {
     margin-right: 15px; 
     margin-left: 15px; 
   }
-  .project_preview {
+  .project_preview img {
     width: 90%; 
   }
   header.hero h1 {
